--- a/sources/scss/style.scss
+++ b/sources/scss/style.scss
@@ -7,13 +7,20 @@ ul {
   padding: 0;
   margin: 0;
   li {
-    height: 40vh;
+    height: 20vh;
     flex-grow: 1;
+    padding: 10px;
     img {
       max-height: 100%;
       min-width: 100%;
       object-fit: cover;
       vertical-align: bottom;
+      transition: 0.5s;
+      &:hover {
+        box-shadow: rgb(85, 91, 255) 0px 0px 0px 3px,
+          rgb(31, 193, 27) 0px 0px 0px 6px, rgb(255, 217, 19) 0px 0px 0px 9px,
+          rgb(255, 156, 85) 0px 0px 0px 12px, rgb(255, 85, 85) 0px 0px 0px 15px;
+      }
     }
   }
   &:after {
@@ -23,36 +30,16 @@ ul {
   }
 }
 
-// Portrait
-
-@media (max-aspect-ratio: 1/1) {
-  li {
-    height: 30vh;
-  }
-}
-
-// Short screens
-
-@media (max-height: 480px) {
-  li {
-    height: 80vh;
-  }
-}
-
-// Smaller screens in portrait
-
-@media (max-aspect-ratio: 1/1) and (max-width: 480px) {
-  ul {
-    flex-direction: row;
-  }
-
+@media (max-width: 480px) {
   li {
     height: auto !important;
-    width: 100%;
   }
   img {
     width: 100%;
-    max-height: 75vh;
-    min-width: 0;
   }
+}
+
+span {
+  z-index: 100;
+  cursor: pointer;
 }
