--- a/sources/scss/style.scss
+++ b/sources/scss/style.scss
@@ -1,5 +1,42 @@
 // BASIC
 
+header {
+  display: flex;
+  justify-content: space-between;
+  height: 20vh;
+  padding: 0 10px;
+  form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 600px;
+    border: none;
+    background: #c0bedc;
+    fieldset {
+      border: none;
+      display: flex;
+      justify-content: space-around;
+      height: 20%;
+      div {
+        width: 210px;
+      }
+    }
+  }
+  .rep a {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    text-decoration: none;
+  }
+  .dropbox {
+    width: 500px;
+    background: #dcd3d3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
 ul {
   display: flex;
   flex-wrap: wrap;
@@ -7,6 +44,7 @@ ul {
   padding: 0;
   margin: 0;
   li {
+    position: relative;
     height: 20vh;
     flex-grow: 1;
     padding: 10px;
@@ -18,8 +56,30 @@ ul {
       transition: 0.5s;
       &:hover {
         box-shadow: rgb(85, 91, 255) 0px 0px 0px 3px,
-          rgb(31, 193, 27) 0px 0px 0px 6px, rgb(255, 217, 19) 0px 0px 0px 9px,
-          rgb(255, 156, 85) 0px 0px 0px 12px, rgb(255, 85, 85) 0px 0px 0px 15px;
+          rgb(31, 193, 27) 0px 0px 0px 6px, rgb(255, 217, 19) 0px 0px 0px 9px;
+      }
+    }
+    span {
+      position: absolute;
+      top: 15px;
+      right: 15px;
+      font-size: 30px;
+      background: white;
+      border-radius: 50%;
+      width: 32px;
+      height: 34px;
+      text-align: center;
+      opacity: 0;
+      pointer-events: none;
+      cursor: pointer;
+      transform: translateY(-10px);
+      transition: 0.3s;
+    }
+    &:hover {
+      span {
+        opacity: 0.8;
+        pointer-events: auto;
+        transform: translateY(0);
       }
     }
   }
@@ -27,6 +87,31 @@ ul {
     content: "";
     display: block;
     flex-grow: 10;
+  }
+}
+
+@media (max-width: 1100px) {
+  .rep {
+    display: none;
+  }
+}
+@media (max-width: 795px) {
+  #dropbox {
+    display: none;
+  }
+  #jsonFile {
+    width: 100%;
+  }
+}
+
+@media (max-width: 560px) {
+  #jsonFile {
+    fieldset {
+      flex-direction: column;
+      div + div {
+        margin-top: 40px;
+      }
+    }
   }
 }
 
@@ -39,15 +124,8 @@ ul {
   }
 }
 
-span {
-  z-index: 100;
-  cursor: pointer;
-}
-
-.dropbox {
-  height: 100px;
-  width: 200px;
-  background: gray;
-  color: white;
-  font-size: 30px;
+@media (max-width: 310px) {
+  header {
+    display: none;
+  }
 }
