--- a/sources/scss/style.scss
+++ b/sources/scss/style.scss
@@ -1,4 +1,18 @@
-// BASIC
+//a little bit of reset code just in case
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  outline: none;
+}
+
+body {
+  background: #74ebd5;
+  background: linear-gradient(to bottom, #74ebd5, #acb6e5);
+  font-size: 16px;
+  line-height: 1.2;
+  color: #888;
+}
 
 header {
   display: flex;
@@ -60,10 +74,6 @@ header {
       object-fit: cover;
       vertical-align: bottom;
       transition: 0.5s;
-      &:hover {
-        box-shadow: rgb(85, 91, 255) 0px 0px 0px 3px,
-          rgb(31, 193, 27) 0px 0px 0px 6px, rgb(255, 217, 19) 0px 0px 0px 9px;
-      }
     }
     span {
       position: absolute;
@@ -87,6 +97,10 @@ header {
         pointer-events: auto;
         transform: translateY(0);
       }
+      img {
+        box-shadow: rgb(85, 91, 255) 0px 0px 0px 3px,
+          rgb(31, 193, 27) 0px 0px 0px 6px, rgb(255, 217, 19) 0px 0px 0px 9px;
+      }
     }
   }
   &:after {
@@ -97,7 +111,7 @@ header {
 }
 
 @media (max-width: 1100px) {
-  .rep {
+  div.rep {
     display: none;
   }
 }
@@ -122,12 +136,13 @@ header {
 }
 
 @media (max-width: 480px) {
-  li {
+  .gallery-tiles__tile {
     height: auto !important;
+    img {
+      width: 100%;
+    }
   }
-  img {
-    width: 100%;
-  }
+
 }
 
 @media (max-width: 310px) {
