--- a/sources/scss/style.scss
+++ b/sources/scss/style.scss
@@ -8,10 +8,18 @@
 
 body {
   background: #74ebd5;
-  background: linear-gradient(to bottom, #74ebd5, #acb6e5);
+  background: linear-gradient(to top, #74ebd5, #acb6e5);
   font-size: 16px;
+  font-family: Arial, Helvetica, sans-serif;
+  transition: all 0.3s ease;
+  animation-delay: 0s;
   line-height: 1.2;
   color: #888;
+  .pagewrap {
+    max-width: 100%;
+    height: 100vh;
+    margin: 0 auto;
+  }
 }
 
 header {
@@ -19,20 +27,101 @@ header {
   justify-content: space-between;
   height: 20vh;
   padding: 0 10px;
-  .json-form {
+  .form {
     display: flex;
+    position: relative;
     justify-content: center;
     align-items: center;
     width: 600px;
     border: none;
-    background: #c0bedc;
+    border-radius: 5px;
+    background: #ecedee;
+    margin: 20px 10px;
+    &__title {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      z-index: 2;
+      background: transparent;
+    }
     .load-fields {
+      position: relative;
+      top: -20px;
       border: none;
       display: flex;
       justify-content: space-around;
       height: 20%;
+      &__field {
+        display: block;
+        width: 100%;
+        height: 100%;
+        padding: 1em;
+        border: 3px solid #fff;
+        background-color: transparent;
+        color: #666;
+        font-weight: bold;
+        margin-bottom: 1em;
+        &:focus + label {
+          top: -15px;
+          left: 3px;
+          width: 30%;
+          height: 10%;
+          padding: 0.8em 1.5em;
+        }
+      }
       div {
         width: 210px;
+      }
+      &__url-based {
+        margin-right: 20px;
+
+        label {
+          position: absolute;
+          top: 4px;
+          left: 4px;
+          width: 40%;
+          height: 28px;
+          padding: 0.8em 1.5em;
+          background-color: skyblue;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          color: #fff;
+          text-transform: uppercase;
+          font-size: 0.8rem;
+          transition: 0.2s;
+        }
+      }
+      &__json-based {
+        input[type="file"] {
+          display: none;
+        }
+        label {
+          background-color: skyblue;
+          color: white;
+          font-size: 0.75em;
+          padding: 0.1em;
+          text-align: center;
+        }
+      }
+      &__add-button {
+        border: none;
+        padding: 0.9em;
+        background-color: skyblue;
+        color: #fff;
+        letter-spacing: 1.2px;
+        font-size: 0.98rem;
+        text-transform: uppercase;
+        box-shadow: -3px 5px darken(skyblue, 10%);
+        cursor: pointer;
+        transition: all 0s ease;
+        position: relative;
+        left: 61px;
+        &.clicked {
+          box-shadow: 0px 0px;
+          top: 10px;
+          left: 58px;
+        }
       }
     }
   }
@@ -62,12 +151,12 @@ header {
   flex-wrap: wrap;
   list-style-type: none;
   padding: 0;
-  margin: 0;
+  margin: 0 15px;
   .gallery-tiles__tile {
     position: relative;
     height: 20vh;
     flex-grow: 1;
-    padding: 10px;
+    padding: 5px;
     img {
       max-height: 100%;
       min-width: 100%;
@@ -90,6 +179,7 @@ header {
       cursor: pointer;
       transform: translateY(-10px);
       transition: 0.3s;
+      z-index: 1;
     }
     &:hover {
       span {
@@ -98,8 +188,7 @@ header {
         transform: translateY(0);
       }
       img {
-        box-shadow: rgb(85, 91, 255) 0px 0px 0px 3px,
-          rgb(31, 193, 27) 0px 0px 0px 6px, rgb(255, 217, 19) 0px 0px 0px 9px;
+        transform: scale(1.05);
       }
     }
   }
@@ -107,6 +196,319 @@ header {
     content: "";
     display: block;
     flex-grow: 10;
+  }
+}
+
+.shake {
+  animation-timing-function: ease-in;
+  transform-origin: bottom center;
+  animation-name: shake;
+  animation-duration: 12s;
+}
+
+@keyframes shake {
+  0% {
+    transform: translate(0px, 0) rotate(0deg);
+  }
+  1% {
+    transform: translate(-2px, 0) rotate(-1deg);
+  }
+  2% {
+    transform: translate(4px, 0) rotate(2deg);
+  }
+  3% {
+    transform: translate(-6px, 0) rotate(-3deg);
+  }
+  4% {
+    transform: translate(8px, 0) rotate(4deg);
+  }
+  5% {
+    transform: translate(-10px, 0) rotate(-5deg);
+  }
+  6% {
+    transform: translate(12px, 0) rotate(6deg);
+  }
+  7% {
+    transform: translate(-14px, 0) rotate(-7deg);
+  }
+  8% {
+    transform: translate(16px, 0) rotate(8deg);
+  }
+  9% {
+    transform: translate(-18px, 0) rotate(-9deg);
+  }
+  10% {
+    transform: translate(20px, 0) rotate(8deg);
+  }
+  11% {
+    transform: translate(-22px, 0) rotate(-8deg);
+  }
+  12% {
+    transform: translate(24px, 0) rotate(8deg);
+  }
+  13% {
+    transform: translate(-26px, 0) rotate(-8deg);
+  }
+  14% {
+    transform: translate(28px, 0) rotate(8deg);
+  }
+  15% {
+    transform: translate(-30px, 0) rotate(-8deg);
+  }
+  16% {
+    transform: translate(32px, 0) rotate(8deg);
+  }
+  17% {
+    transform: translate(-34px, 0) rotate(-8deg);
+  }
+  18% {
+    transform: translate(36px, 0) rotate(8deg);
+  }
+  19% {
+    transform: translate(-38px, 0) rotate(-8deg);
+  }
+  20% {
+    transform: translate(40px, 0) rotate(8deg);
+  }
+  21% {
+    transform: translate(-42px, 0) rotate(-8deg);
+  }
+  22% {
+    transform: translate(44px, 0) rotate(8deg);
+  }
+  23% {
+    transform: translate(-46px, 0) rotate(-8deg);
+  }
+  24% {
+    transform: translate(48px, 0) rotate(8deg);
+  }
+  25% {
+    transform: translate(-50px, 0) rotate(-8deg);
+  }
+  26% {
+    transform: translate(52px, 0) rotate(8deg);
+  }
+  27% {
+    transform: translate(-54px, 0) rotate(-8deg);
+  }
+  28% {
+    transform: translate(56px, 0) rotate(8deg);
+  }
+  29% {
+    transform: translate(-58px, 0) rotate(-8deg);
+  }
+  30% {
+    transform: translate(60px, 0) rotate(8deg);
+  }
+  31% {
+    transform: translate(-62px, 0) rotate(-8deg);
+  }
+  32% {
+    transform: translate(64px, 0) rotate(8deg);
+  }
+  33% {
+    transform: translate(-66px, 0) rotate(-8deg);
+  }
+  34% {
+    transform: translate(68px, 0) rotate(8deg);
+  }
+  35% {
+    transform: translate(-70px, 0) rotate(-8deg);
+  }
+  36% {
+    transform: translate(72px, 0) rotate(8deg);
+  }
+  37% {
+    transform: translate(-74px, 0) rotate(-8deg);
+  }
+  38% {
+    transform: translate(76px, 0) rotate(8deg);
+  }
+  39% {
+    transform: translate(-78px, 0) rotate(-8deg);
+  }
+  40% {
+    transform: translate(80px, 0) rotate(8deg);
+  }
+  41% {
+    transform: translate(-82px, 0) rotate(-8deg);
+  }
+  42% {
+    transform: translate(84px, 0) rotate(8deg);
+  }
+  43% {
+    transform: translate(-86px, 0) rotate(-8deg);
+  }
+  44% {
+    transform: translate(88px, 0) rotate(8deg);
+  }
+  45% {
+    transform: translate(-90px, 0) rotate(-8deg);
+  }
+  46% {
+    transform: translate(92px, 0) rotate(8deg);
+  }
+  47% {
+    transform: translate(-94px, 0) rotate(-8deg);
+  }
+  48% {
+    transform: translate(96px, 0) rotate(8deg);
+  }
+  49% {
+    transform: translate(-98px, 0) rotate(-8deg);
+  }
+  50% {
+    transform: translate(100px, 0) rotate(8deg);
+  }
+  51% {
+    transform: translate(-102px, 0) rotate(-8deg);
+  }
+  52% {
+    transform: translate(104px, 0) rotate(8deg);
+  }
+  53% {
+    transform: translate(-106px, 0) rotate(-8deg);
+  }
+  54% {
+    transform: translate(108px, 0) rotate(8deg);
+  }
+  55% {
+    transform: translate(-110px, 0) rotate(-8deg);
+  }
+  56% {
+    transform: translate(112px, 0) rotate(8deg);
+  }
+  57% {
+    transform: translate(-114px, 0) rotate(-8deg);
+  }
+  58% {
+    transform: translate(116px, 0) rotate(8deg);
+  }
+  59% {
+    transform: translate(-118px, 0) rotate(-8deg);
+  }
+  60% {
+    transform: translate(120px, 0) rotate(8deg);
+  }
+  61% {
+    transform: translate(-122px, 0) rotate(-8deg);
+  }
+  62% {
+    transform: translate(124px, 0) rotate(8deg);
+  }
+  63% {
+    transform: translate(-126px, 0) rotate(-8deg);
+  }
+  64% {
+    transform: translate(128px, 0) rotate(8deg);
+  }
+  65% {
+    transform: translate(-130px, 0) rotate(-8deg);
+  }
+  66% {
+    transform: translate(132px, 0) rotate(8deg);
+  }
+  67% {
+    transform: translate(-134px, 0) rotate(-8deg);
+  }
+  68% {
+    transform: translate(136px, 0) rotate(8deg);
+  }
+  69% {
+    transform: translate(-138px, 0) rotate(-8deg);
+  }
+  70% {
+    transform: translate(140px, 0) rotate(8deg);
+  }
+  71% {
+    transform: translate(-142px, 0) rotate(-8deg);
+  }
+  72% {
+    transform: translate(144px, 0) rotate(8deg);
+  }
+  73% {
+    transform: translate(-146px, 0) rotate(-8deg);
+  }
+  74% {
+    transform: translate(148px, 0) rotate(8deg);
+  }
+  75% {
+    transform: translate(-150px, 0) rotate(-8deg);
+  }
+  76% {
+    transform: translate(152px, 0) rotate(8deg);
+  }
+  77% {
+    transform: translate(-154px, 0) rotate(-8deg);
+  }
+  78% {
+    transform: translate(156px, 0) rotate(8deg);
+  }
+  79% {
+    transform: translate(-158px, 0) rotate(-8deg);
+  }
+  80% {
+    transform: translate(160px, 0) rotate(8deg);
+  }
+  81% {
+    transform: translate(-162px, 0) rotate(-8deg);
+  }
+  82% {
+    transform: translate(164px, 0) rotate(8deg);
+  }
+  83% {
+    transform: translate(-166px, 0) rotate(-8deg);
+  }
+  84% {
+    transform: translate(168px, 0) rotate(8deg);
+  }
+  85% {
+    transform: translate(-170px, 0) rotate(-8deg);
+  }
+  86% {
+    transform: translate(172px, 0) rotate(8deg);
+  }
+  87% {
+    transform: translate(-174px, 0) rotate(-8deg);
+  }
+  88% {
+    transform: translate(176px, 0) rotate(8deg);
+  }
+  89% {
+    transform: translate(-178px, 0) rotate(-8deg);
+  }
+  90% {
+    transform: translate(180px, 0) rotate(8deg);
+  }
+  91% {
+    transform: translate(-182px, 0) rotate(-8deg);
+  }
+  92% {
+    transform: translate(184px, 0) rotate(8deg);
+  }
+  93% {
+    transform: translate(-186px, 0) rotate(-8deg);
+  }
+  94% {
+    transform: translate(188px, 0) rotate(8deg);
+  }
+  95% {
+    transform: translate(-190px, 0) rotate(-8deg);
+  }
+  96% {
+    transform: translate(192px, 0) rotate(8deg);
+  }
+  97% {
+    transform: translate(-194px, 0) rotate(-8deg);
+  }
+  98% {
+    transform: translate(196px, 0) rotate(8deg);
+  }
+  99% {
+    transform: translate(-198px, 0) rotate(-8deg);
+  }
+  100% {
+    transform: translate(0, 0) rotate(0deg);
   }
 }
 
@@ -142,7 +544,6 @@ header {
       width: 100%;
     }
   }
-
 }
 
 @media (max-width: 310px) {
